# unskild_vla_experiment

./: README.md  prompt.txt  pyproject.toml
config/data/: action.yaml  diffusion.yaml  vlm.yaml
config/experiments/: action_policy.yaml  flow_matching.yaml  lerobot_action_finetune.yaml  lerobot_diffusion_finetune.yaml  lerobot_vlm_finetune.yaml  vlm_finetune.yaml
config/model/: action_policy.yaml  flow_matching.yaml  vlm_finetune.yaml
config/training/: default.yaml
docs/: LOAD_AND_FINETUNE.md
src/: __init__.py
src/cli/: __init__.py  eval.py  export.py  train.py
src/config/: __init__.py  schema.py
src/core/: __init__.py  exceptions.py  logging.py  registry.py  typing.py
src/data/: __init__.py  dataloaders.py
src/data/datasets/: __init__.py  action.py  base.py  diffusion.py  lerobot_action.py  lerobot_base.py  lerobot_diffusion.py  lerobot_vlm.py  vlm.py
src/data/transforms/: __init__.py  multimodal.py  text.py  vision.py
src/evaluation/: __init__.py  benchmarks.py
src/evaluation/metrics/: __init__.py  action.py  language.py  vision.py
src/models/: __init__.py
src/models/action/: __init__.py  base.py  policies.py
src/models/diffusion/: __init__.py  base.py  flow_matching.py  schedulers.py
src/models/language/: __init__.py  decoders.py
src/models/vision/: __init__.py  encoders.py
src/models/vlm/: __init__.py  adapters.py  base.py  llava.py  paligemma.py
src/pipelines/: __init__.py  action_training.py  base.py  diffusion_training.py  hybrid.py  vlm_training.py
src/training/: __init__.py  callbacks.py  optimizers.py  schedulers.py
(+9 files in other folders)
